--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^7.13.1",
     "@mantine/hooks": "^7.7.1",
     "@mantine/notifications": "^7.13.1",
+    "@tabler/icons-react": "^3.19.0",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
